--- a/examples/adaptive-navbar/adaptive-navbar_example.html
+++ b/examples/adaptive-navbar/adaptive-navbar_example.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html ng-app="adaptiveNavbarApp">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../bower_components/uikit/css/uikit.almost-flat.css">
   </head>
   <body ng-controller="ExampleCtrl">
     <div class="uk-container uk-container-center">
-      <uk-adaptive-navbar uk-items="items">
-      </uk-adaptive-navbar>
+      <uk-adaptive-navbar uk-items="items"></uk-adaptive-navbar>
     </div>
 
     <script src="../../bower_components/jquery/dist/jquery.js"></script>
