--- a/src/adaptive-navbar/adaptive-navbar.html
+++ b/src/adaptive-navbar/adaptive-navbar.html
@@ -1,6 +1,6 @@
 <div class="uk-navbar">
 <ul class="uk-navbar-nav">
-  <li ng-repeat="item in items">
+  <li ng-repeat="item in items" class="{{ ::class(item) }}">
     <a href="#{{ item.path }}" ng-bind="item.title"></a>
   </li>
 </ul>
