--- a/examples/autocomplete/autocomplete_example.html
+++ b/examples/autocomplete/autocomplete_example.html
@@ -22,10 +22,22 @@
         <div class="uk-form-row">
           Selected: {{ value2 }}
         </div>
+        <h2>Custom value property</h2>
+        <div class="uk-form-row">
+          <input type="text" ng-model="value4">
+          <uk-autocomplete uk-value="country" uk-items="cities">
+          <i class="uk-icon uk-icon-large uk-icon-globe uk-float-left uk-margin-right"></i>
+          <div>{{ item.city }}</div>
+          <small>{{ item.country }}</small>
+          </uk-autocomplete>
+        </div>
+        <div class="uk-form-row">
+          Selected: {{ value4 }}
+        </div>
         <h2>Template and object items</h2>
         <div class="uk-form-row">
           <input type="text" ng-model="value3">
-          <uk-autocomplete uk-items="::cities" uk-select="obj = $item">
+          <uk-autocomplete uk-items="cities" uk-select="obj = $item">
           <i class="uk-icon uk-icon-large uk-icon-globe uk-float-left uk-margin-right"></i>
           <div>{{ item.city }}</div>
           <small>{{ item.country }}</small>
